# llm-asteroids-demo

./: README.md  asteroids_demo.py  main.py  pyproject.toml  run_demo.py
asteroids_demo/: asteroid.py  bullet.py  config.py  fragment.py  main.py  pyproject.toml  saucer.py  ship.py
asteroids_demo/src/asteroids_demo/: __init__.py
