[project]
name = "asteroids-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul Nettle", email = "nettle.paul@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
